# ozon_ai_call_simulator

./: .cursorignore  .gitignore  Caddyfile  Caddyfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml
agent_service/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
auth_service/: .dockerignore  .env.example  Dockerfile  README.md  database.py  main.py  pyproject.toml  security.py
backend_service/: README.md  database.py  main.py  pyproject.toml
evals/: Dockerfile  README.md  docker-compose.yml  requirements.txt  run.sh
frontend/: .env.example  Dockerfile  README.md  app-config.ts  next.config.ts  (+2 more)
judge_service/: .dockerignore  .env.example  Dockerfile  README.md  database.py  evaluation_models.py  judge.py  judge_prompt.txt  main.py  pyproject.toml  scenario_mapping.py  scenarios.py
judge_service/api/: __init__.py  app.py
judge_service/api/db/: __init__.py  repository.py
judge_service/api/routes/: __init__.py  health.py  session_results.py
judge_service/api/schemas/: __init__.py  responses.py
judge_service/api/services/: __init__.py  session_results.py
judge_service/eval_dataset/: REPORT.md  cases.json  compare_report.py  corp_data.md  run_compare.py
judge_service/evals/fixtures/: novice_ip_bad_01.json  novice_ip_edge_01.json  novice_ip_good_01.json  novice_ip_medium_01.json
judge_service/judge/: __init__.py  graph.py  llm_judge.py  merged_evaluation.py  output.py
judge_service/judge/knowledge_rag/: __init__.py  chroma_store.py  faq_parse.py
judge_service/judge/steps/: __init__.py
judge_service/judge/steps/compliance/: __init__.py  judge.py  schema.py  system_prompt.py
judge_service/judge/steps/knowledge/: __init__.py  judge.py  schema.py  system_prompt.py
judge_service/judge/steps/sales_skills/: __init__.py  judge.py  schema.py  system_prompt.py
judge_service/judge/steps/shared/: __init__.py  criterion.py  transcript.py
judge_service/judge_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
judge_service/judge_v2/: README.md  adapter.py  deterministic_checks.py  feedback.py  kb_loader.py  llm_evaluator.py  pipeline.py  retriever.py  runtime.py  schemas.py  scoring.py  segmenter.py  testing.py
judge_service/knowledge_base/eval_policy/: account_docs_ip.md  account_docs_ooo.md  accountant_benefit_ip.md  buh_free_usn_income.md  closing_rules.md  congratulation_rules.md  free_account_ip.md  greeting_rules.md  objection_existing_rules.md  savings_account_benefit.md  second_account_rules.md  verification_rules.md
judge_service/knowledge_base/normalized/eval_policy/: compliance_account_docs_ip.yaml  compliance_free_account_ip.yaml  congratulation_given.yaml
judge_service/knowledge_base/normalized/policy/: docs.must_say_original_passport_rf.yaml  greeting.no_bank.self_intro.yaml  onboarding.must_offer_free_account.yaml
judge_service/knowledge_base/scripts/: novoreg_call_flow.md
judge_service/rag/: loader.py  retriever.py
judge_service/scripts/: ingest_rko_faq.py  inspect_retrieval.py  run_eval.py  run_eval_dataset.py  test_judge_local.py  test_judge_v2_local.py
stt_service/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
stt_service/tone_models/: README.md
tts_service/: Dockerfile  README.md  main.py  pyproject.toml
(+75 files in other folders)
